yamls-for-product-app/product-app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-app
  namespace: qa
spec:
  replicas: 2
  selector:
    matchExpressions:
      - key: app
        operator: In
        values:
          - product-app
      - key: environment
        operator: In
        values:
          - dev
          - qa

  template:
    metadata:
      labels:
        app: product-app

    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: dedicated
                    operator: In
                    values:
                      - cart-app
      containers:
        - name: product-app-container
          image: ram1uj/k8s-product-app
          ports:
            - containerPort: 8080
