yamls-for-product-app/product-app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: product-app-service

spec:
  selector:
    app: product-app

  type: NodePort

  ports:
    - port: 80
      targetPort: 8080
