yamls-for-product-app/network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-to-cart-app

spec:
  podSelector:
    matchLabels:
      app: cart-app

  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: product-app
      ports:
        - protocol: TCP
          port: 8080
